--- a/src/index.css
+++ b/src/index.css
@@ -67,17 +67,6 @@ body {
   animation: slide-in-top 0.3s both;
 }
 
-@keyframes slide-in-top {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 .box {
   background: transparent;
 }
@@ -117,6 +106,24 @@ body {
   transition: all 0.5s;
 }
 
+/* modification to the toast notify */
+.Toastify__toast-body {
+  background-color: transparent;
+}
+.Toastify__close-button svg {
+  background-color: transparent;
+}
+@keyframes slide-in-top {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 @keyframes rotate {
   0% {
     transform: rotateY(180deg);
