profile changed into card, Name in the introduction chnaged into animation

--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,35 @@ body {
     transform: rotateY(360deg);
   }
 }
+
+svg text {
+  animation: stroke 7s infinite alternate;
+  stroke-width: 2;
+  stroke: #ff9559;
+  font-size: 3rem;
+}
+@keyframes stroke {
+  0% {
+    fill: rgba(255, 149, 89, 0);
+    stroke: rgba(255, 149, 89, 1);
+    stroke-dashoffset: 25%;
+    stroke-dasharray: 0 50%;
+    stroke-width: 2;
+  }
+  70% {
+    fill: rgba(255, 149, 89, 0);
+    stroke: rgba(255, 149, 89, 1);
+  }
+  80% {
+    fill: rgba(255, 149, 89, 0);
+    stroke: rgba(255, 149, 89, 1);
+    stroke-width: 3;
+  }
+  100% {
+    fill: rgba(255, 149, 89, 1);
+    stroke: rgba(255, 149, 89, 0);
+    stroke-dashoffset: -25%;
+    stroke-dasharray: 50% 0;
+    stroke-width: 0;
+  }
+}
