--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 body {
   width: 100%;
   overflow-x: hidden;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   /* font-family: "Roboto", sans-serif; */
   /* font-family: "Montserrat", sans-serif; */
   /* font-family: "Open Sans", sans-serif; */
