--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,9 @@ body {
   transform: scale(0.9);
   transition-duration: 0.3s;
 }
-
+.socialSvg {
+  background-color: transparent;
+}
 .socialContainer:hover .socialSvg {
   animation: slide-in-top 0.3s both;
 }
